--- a/installation/docker-compose.yml
+++ b/installation/docker-compose.yml
@@ -5,15 +5,14 @@ services:
 
   db:
     image: postgres
-    container_name : database
+    container_name : ipspawn
     restart: always
     environment:
-      POSTGRES_PASSWORD: example
+      POSTGRES_PASSWORD: "facauchere"
+      POSTGRES_DB: "ipspawn"
 
   adminer:
     image: adminer
     restart: always
     ports:
-      - 8080:8080
-
-#docker run --cap-add=NET_ADMIN -dit imagename /bin/sh -c "/sbin/ip addr add 172.17.0.12 dev eth0; bash"
+      - 8081:8081
