--- a/installation/docker-compose.yml
+++ b/installation/docker-compose.yml
@@ -4,7 +4,7 @@ version: '3.1'
 services:
 
   db:
-    image: postgres
+    image: guillaumezisa/ipspawn
     container_name : ipspawn
     restart: always
     environment:
